# shellshock-api

./: .env.example  .gitignore  API_DOCUMENTATION.md  Anchor.toml  Cargo.toml  Dockerfile  README.md  package.json  tsconfig.json
migrations/: deploy.ts
programs/shellshock/: Cargo.toml
programs/shellshock/src/: lib.rs
src/: config.rs  main.rs  model.rs  solana.rs  state.rs  ws.rs
tests/: shellshock.ts
