[package]
name = "shellshock-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["http1", "json", "macros", "ws"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
futures-util = "0.3"
rand = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
solana-client = "2.1"
solana-sdk = "2.1"
tokio = { version = "1.48", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.26"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
